--- a/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
+++ b/src/app/loadout/loadout-menu/LoadoutPopup.m.scss
@@ -10,7 +10,7 @@
   z-index: 2;
   color: rgba(245, 245, 245, 0.6);
   overscroll-behavior: contain;
-  background-color: black;
+  background-color: var(--theme-fill-primary);
 
   @include visible-scrollbars;
 
@@ -155,7 +155,6 @@
 }
 
 .content {
-  background-color: black;
   color: #e4e4e4;
 }
 
