--- a/src/app/dim-ui/WeaponDeepsightInfo.m.scss
+++ b/src/app/dim-ui/WeaponDeepsightInfo.m.scss
@@ -5,12 +5,12 @@
   gap: 4px;
 
   :global(.objective-progress) {
-    background: #222;
+    background: var(--theme-fill-darken);
   }
 }
 
 .deepsightProgressSection {
   padding: 4px 10px 4px;
-  background: #333;
+  background: var(--theme-fill-lighten);
   flex-grow: 1;
 }
