--- a/src/app/item-popup/ItemPopup.m.scss
+++ b/src/app/item-popup/ItemPopup.m.scss
@@ -26,22 +26,22 @@
   // Mod drawer has z-index of 14 and needs to sit over this
   z-index: 13;
 
-  --background-color: 0, 0%, 0%;
+  --background-color: rgba(0, 0, 0, 1);
 
   &.exotic {
-    --background-color: 48, 71%, 5%;
+    --background-color: rgba(22, 18, 4, 1);
   }
   &.legendary {
-    --background-color: 279, 36%, 5%;
+    --background-color: rgba(14, 8, 17, 1);
   }
   &.rare {
-    --background-color: 213, 34%, 6%;
+    --background-color: rgba(10, 15, 21, 1);
   }
   &.uncommon {
-    --background-color: 126, 35%, 5%;
+    --background-color: rgba(8, 17, 9, 1);
   }
   &.common {
-    --background-color: 0, 0%, 7%;
+    --background-color: rgba(18, 18, 18, 1);
   }
 
   &[data-popper-placement^='top'] .arrow {
@@ -101,9 +101,10 @@
 }
 
 .popupBackground {
-  background-color: #{'hsl(var(--background-color))'};
+  background-color: var(--background-color);
   contain: content;
   box-shadow: 0 -1px 24px 4px #161626;
+
   @include phone-portrait {
     box-shadow: none;
   }
