--- a/src/app/item-popup/ItemPopupBody.scss
+++ b/src/app/item-popup/ItemPopupBody.scss
@@ -72,7 +72,7 @@
 .masterwork-progress {
   margin: 4px 0;
   padding: 4px 10px 4px;
-  background: #333;
+  background: var(--theme-fill-lighten);
 
   span {
     color: var(--theme-accent-primary);
@@ -88,14 +88,14 @@
 
 .crafted-progress {
   padding: 4px 10px 4px;
-  background: #333;
+  background: var(--theme-fill-lighten);
   gap: 4px;
 
   display: flex;
   align-items: center;
 
   .objective-progress {
-    background: #222;
+    background: var(--theme-fill-darken);
   }
 
   .objective-progress-bar {
