--- a/src/app/main.scss
+++ b/src/app/main.scss
@@ -208,7 +208,7 @@ input[type='search'] {
 textarea {
   width: 100%;
   height: 30px;
-  background-color: #333;
+  background-color: var(--theme-fill-darken);
   padding: 4px 8px;
   border: none;
   outline: none;
@@ -228,7 +228,7 @@ select {
   background-position: calc(100% - 10px) center;
   background-repeat: no-repeat;
   border-radius: 0;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: var(--theme-button);
   padding: 2px 28px 2px 10px;
   height: 27px;
   font-size: 12px;
