--- a/src/app/search/SearchBar.m.scss
+++ b/src/app/search/SearchBar.m.scss
@@ -20,7 +20,7 @@
   overflow: hidden;
   margin: 0;
   border-top: 0;
-  background: #161616;
+  background: var(--theme-fill-secondary);
   position: absolute;
   z-index: 50;
   list-style: none;
@@ -28,8 +28,8 @@
   left: 0;
   right: 0;
   top: 32px;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
+  border-bottom-left-radius: var(--theme-corner-radius-search);
+  border-bottom-right-radius: var(--theme-corner-radius-search);
 
   @include phone-portrait {
     top: calc(100% + 1px);
