--- a/src/app/shell/Header.m.scss
+++ b/src/app/shell/Header.m.scss
@@ -165,7 +165,7 @@ $header-height: 44px;
   margin: 0;
   padding: 0;
   min-width: 150px;
-  background-color: black;
+  background-color: var(--theme-fill-primary);
   padding-left: env(safe-area-inset-left);
   padding-bottom: Max(4px, env(safe-area-inset-bottom));
   flex-direction: column;
