--- a/src/app/item-popup/DesktopItemActions.m.scss
+++ b/src/app/item-popup/DesktopItemActions.m.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: var(--theme-fill-primary);
+  background-color: var(--theme-fill-secondary);
   box-shadow: var(--theme-drop-shadow-framed);
   user-select: none;
 }
