--- a/src/app/inventory-page/StoreBucketDropTarget.m.scss
+++ b/src/app/inventory-page/StoreBucketDropTarget.m.scss
@@ -1,6 +1,6 @@
 .canDrop {
-  background-color: rgba(200, 200, 200, 0.2);
+  background-color: var(--theme-fill-lighten);
 }
 .over {
-  box-shadow: inset 0 0 6px 0 rgba(200, 200, 200, 0.7);
+  box-shadow: inset 0 0 0 1px #fff;
 }
