--- a/src/app/item-popup/ItemPopup.m.scss
+++ b/src/app/item-popup/ItemPopup.m.scss
@@ -11,14 +11,14 @@
   height: 10px;
   border-style: solid;
   position: absolute;
-  border-color: black;
+  border-color: white;
   z-index: -1;
 }
 
 .desktopPopupRoot {
   pointer-events: none;
   .arrow {
-    border-color: #161626;
+    border-color: white;
   }
 }
 
@@ -80,20 +80,20 @@
   &[data-popper-placement^='right'] .arrow {
     width: 0;
     height: 0;
-    border-width: 5px 5px 5px 0;
+    border-width: 8px 8px 8px 0;
     border-left-color: transparent;
     border-top-color: transparent;
     border-bottom-color: transparent;
-    left: -5px;
+    left: -8px;
   }
   &[data-popper-placement^='left'] .arrow {
     width: 0;
     height: 0;
-    border-width: 5px 0 5px 5px;
+    border-width: 8px 0 8px 8px;
     border-top-color: transparent;
     border-right-color: transparent;
     border-bottom-color: transparent;
-    right: -5px;
+    right: -8px;
   }
   textarea {
     resize: vertical;
