--- a/src/app/records/Record.m.scss
+++ b/src/app/records/Record.m.scss
@@ -128,10 +128,7 @@
 
 .trackedInDim .glow {
   display: block;
-  background: linear-gradient(
-    scale-color($orange, $alpha: -100%) 0%,
-    scale-color($orange, $alpha: -80%) 100%
-  );
+  background: linear-gradient(transparent 0%, var(--theme-accent-primary) 500%);
 }
 
 .redeemed.gildingTriumph .glow {
